# cpp-blockchain

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cpp-blockchain
include/: block.hpp  blockchain.hpp
scripts/: run.sh
src/: block.cpp  blockchain.cpp  main.cpp  node.cpp
tests/: chain_test.cpp
